--- a/color.css
+++ b/color.css
@@ -14,6 +14,7 @@ header {
     margin:25px;
     width:75px;
     height:50px;
+    cursor:pointer;
 }
 
 #color-scheme {
@@ -38,6 +39,7 @@ header {
     border: none;
     border-radius:5px;
     font-size: 16px;
+    cursor: pointer;
 }
 
 .color-boxes{
